data/derived/comb/progs/unify/prog4185.ml.out
Characters 193-194:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a * 'b list -> 'c -> 'd list
       but an expression was expected of type
         'a * 'b list -> 'c -> 'a * 'b list
       Type 'd list is not compatible with type 'a * 'b list 
